# connected-spaces-platform-web

./: .clang-format  .clangd  .gitignore  Bindings.cpp  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  package.json.in
.github/workflows/: build-bindings.yml  c-cpp.yml  make-release.yml
cmake/: PackageInstall.cmake
docs/: Async.md  Clients.md  Debugging.md  Interop-Types.md  README.md  Typescript.md
src/bindings/: TestBindings.cpp
src/bindings/async/: Callbacks.h
src/bindings/containers/: Array.h  Clone.cpp  Clone.h  Disposal.cpp  Disposal.h  Equality.cpp  List.h  Map.h  Optional.h  String.h
src/bindings/string/: String.h
src/bindings/testtypes/: BindingsTestType.cpp  BindingsTestType.h  TestCallbackBindings.cpp  TestContainerBindings.cpp
src/bindings/utils/: Clone.cpp  Clone.h  Equality.cpp  Handles.h  JSDisposable.h  Memory.cpp  Memory.h  RAIIVal.h
src/polyfills/: polyfills.js
src/type-overlays/: clone.d.ts  disposal.d.ts  equality.d.ts  index.d.ts  memory.d.ts
tests/: .npmrc  csp.d.ts  eslint.config.js  loadModule.ts  package-lock.json  package.json  tsconfig.json  version.test.ts  vitest.config.ts  vitest.debug.config.ts
tests/src/: array.test.ts  callback.test.ts  container-clone.test.ts  equality.test.ts  lifting-callback-args.test.ts  list.test.ts  map.test.ts  memory.test.ts  optional.test.ts  returnvalues.test.ts  string.test.ts  version.test.ts
tests/src/types/: equality.test-d.ts  memory.test-d.ts
